Fix Commonhaus footer layout on mobile
Fix overlapping elements in Commonhaus footer on mobile screens.
Previously, the CC license text and Commonhaus logo both occupied
grid-row 1, causing them to overlap on mobile.

On mobile (480px and below), now properly stack elements:
- Commonhaus logo: grid-row 1 (top)
- Copyright/legal text: grid-row 2 (middle)
- CC license: grid-row 3 (bottom)

Add proper spacing between elements and padding to legal text to
prevent edge touching.

--- a/src/main/resources/web/app/includes/commonhaus-footer.scss
+++ b/src/main/resources/web/app/includes/commonhaus-footer.scss
@@ -24,8 +24,9 @@
     }
     @media screen and (max-width: 480px) {
       grid-column: 1/13;
+      grid-row: 3;
       justify-self: center;
-      order: 3;
+      margin-top: 1rem;
     }
   }
 
@@ -34,8 +35,8 @@
     grid-row: 1;
     justify-self: center;
     align-self: center;
-    img { 
-        height: 30px; 
+    img {
+        height: 30px;
     }
     @media screen and (max-width: 1024px) {
       grid-column: 6/12;
@@ -46,8 +47,9 @@
     }
     @media screen and (max-width: 480px) {
       grid-column: 1/13;
+      grid-row: 1;
       justify-self: center;
-      order: 1;
+      margin-bottom: 1rem;
     }
   }
 
@@ -58,6 +60,7 @@
     justify-self: center;
     font-size: .75rem;
     font-weight: 200;
+    padding: 0 1rem;
     a {
       color: $white;
     }
@@ -70,8 +73,9 @@
     }
     @media screen and (max-width: 480px) {
       grid-column: 1/13;
+      grid-row: 2;
       justify-self: center;
-      order: 2;
+      margin-bottom: 1rem;
     }
   }
 }
